feat(notification-service): configure Gmail SMTP and HTML email templates